discussion/kv_engine/129645/129645_rev67_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39620: Add support for ifconfig commands [2.0/3]

This patch contains the implementation for the ifconfig
commands (and a unit test suite which tests them).

It is currently not possible to fully use the new commands
as it is in "conflict" with the normal config reload (it'll
give you undefined behavior as it might drop and open ports
etc).

Change-Id: I56eea6cbcb2e0d4b073f4247c29d7308dc40d67b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-16 10:22:18.000000000
Message: 
Uploaded patch set 67: Patch Set 66 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-16 10:44:47.000000000
Message: 
Patch Set 67: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9933/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/tasks.def.h:25:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/tasks.def.h:25:6: error: use of undeclared identifier "MultiBGFetcherTask" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/tasks.def.h:25:26: error: use of undeclared identifier "READER_TASK_IDX" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/tasks.def.h:25:45: error: expected ";" after top level declarator [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                                            ^
                                            ;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9933/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/tasks.def.h:25:1:
error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9933/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11649/ : FAILURE

Failure of GoogleTest "KVStoreParam/KVStoreParamTest.CompactAndScan/magma":

<pre>
[ RUN      ] KVStoreParam/KVStoreParamTest.CompactAndScan/magma
[2021-06-16T10:40:51.126Z] ../kv_engine/engines/ep/tests/module_tests/kvstore_test.cc:862: Failure
[2021-06-16T10:40:51.126Z] Failed
[2021-06-16T10:40:51.126Z] initBySeqnoScanContext returned nullptr
[2021-06-16T10:40:51.126Z] [  FAILED  ] KVStoreParam/KVStoreParamTest.CompactAndScan/magma, where GetParam() = "magma" (335 ms)
KVStoreParam/KVStoreParamTest.CompactAndScan/magma
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11649/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8519/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36923/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/432/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31542/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10577/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11926/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11497/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19512/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-06-16 10:58:31.000000000
Message: 
Patch Set 67: Verified+1

tasks.def.h isn't compatible with clang-tidy
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-06-16 10:58:34.000000000
Message: 
Removed Verified-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-06-16 12:27:32.000000000
Message: 
Patch Set 67: Code-Review+2

(1 comment)
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-06-16 15:37:35.000000000
Message: 
Patch Set 67:

(1 comment)
----------------------------------------------------------------------------------------------------------------------
